# Horn-Schunck-parallel-serial

./: CMakeLists.txt  README.md  main.cpp  run.sh  run_mpi.sh
include/: opt_flow_mpi.hpp  opt_flow_parallel.hpp  opt_flow_serial.hpp
src/: opt_flow_mpi.cpp  opt_flow_parallel.cpp  opt_flow_serial.cpp
